k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sleepvia-backend
  labels:
    app: sleepvia-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sleepvia-backend
  template:
    metadata:
      labels:
        app: sleepvia-backend
    spec:
      containers:
        - name: backend
          image: us-west1-docker.pkg.dev/project-8dc10e91-6100-4532-bb6/sleepvia-repo/sleepvia-backend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /api/hello
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /api/hello
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
