k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sleepvia-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sleepvia-frontend
  template:
    metadata:
      labels:
        app: sleepvia-frontend
    spec:
      containers:
        - name: frontend
          image: us-west1-docker.pkg.dev/project-8dc10e91-6100-4532-bb6/sleepvia-repo/sleepvia-frontend:placeholder
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 20
            failureThreshold: 3
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
