k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sleepvia-frontend
spec:
  selector:
    app: sleepvia-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
