k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sleepvia-ingress
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  rules:
    - host: sleepvia.duckdns.org
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: sleepvia-backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sleepvia-frontend
                port:
                  number: 80
